--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body,
 html {
+    
     margin: 0;
     padding: 0;
     font-family: "Roboto", sans-serif;
@@ -546,7 +547,9 @@ h1 {
 }
 
 .phonecard {
-    min-width: 100px;
+    min-width: 180px; /* creștem minimul */
+    max-width: 250px; /* limităm maximul ca să nu fie exagerat */
+    width: 100%; /* ocupă tot spațiul disponibil în container */
     background-color: white;
     border-radius: 15px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
@@ -555,8 +558,6 @@ h1 {
     color: black;
     height: max-content;
     position: relative;
-
-
 }
 
 .phoneimage {
@@ -839,7 +840,7 @@ h1 {
     display: block;
     margin: 40px auto 80px auto;
     font-size: 1.75em;
-    background-color: #22A7F0;
+    background-color: #1b5e20;
     border-radius: 12px;
     color: white;
     cursor: pointer;
@@ -848,7 +849,109 @@ h1 {
 .section-header {
     display: flex;
     justify-content: center;
+
 }
+
+.container {
+    width: 100%;
+}
+
+.empty-message {
+    color: black;
+
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    background-color: #F4F4F4;
+}
+
+.footer-section {
+    background-color: #F1F8FE;
+
+    padding: 12px;
+}
+
+.div-footer {
+    display: flex;
+    color: #1b5e20;
+    flex-direction: column;
+    font-size: 12px;
+}
+
+.main-footer {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.header-footer-contain {
+    font-size: 15px;
+    color: #236627;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.span-header-footer-contain {
+    padding: 8px;
+
+}
+
+.ask-support-button {
+    width: fit-content;
+    background-color: #22A7F0;
+    border: none;
+    cursor: pointer;
+    padding: 8px;
+    border-radius: 15px;
+    color: white;
+}
+
+.footer-nav-div li {
+    display: flex;
+
+}
+
+.footer-nav-div li a {
+    display: flex;
+    color: #236627;
+}
+
+.footer-ul {
+    display: flex;
+    margin-right: 10px;
+    color: #236627;
+
+}
+
+.footer-ul.a {
+    color: #236627;
+}
+
+.footer-nav-div {
+
+    display: flex;
+    justify-content: center;
+}
+
+.copyright {
+    padding: 20px;
+    color: black;
+    font-size: 10px;
+}
+
+.social-div {
+    width: fit-content;
+    display: flex;
+    justify-content: center;
+}
+
+  #map {
+      height: 300px;
+      width: 100%;
+      border-radius: 10px;
+      margin: 20px;
+    }
+
+
 
 
 /* Ketu fillon stilimi per media queries */
@@ -878,5 +981,10 @@ h1 {
     .produkte {
         display: none;
     }
+    #map {
+    height: 150px;   /* mai mică pe mobil */
+    width: 90%;      /* un pic de margine laterală */
+    margin: 10px auto;  /* centrează harta */
+  }
 
 }
