--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,116 @@ html {
     padding: 0;
     font-family: "Roboto", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 60px;
+
     font-style: normal;
-    font-variation-settings:
-        "wdth" 100;
-    color: #F5F5F5;
+    color: #F0F0F0;
     overflow-x: hidden;
+}
+.carousel-dots {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    gap: 5px;
+}
+
+.carousel-dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: rgba(255,255,255,0.5);
+    cursor: pointer;
+}
+
+.carousel-dot.active {
+    background-color: green;
+}
+
+
+.carousel {
+    position: relative;
+}
+
+
+.carousel-image {
+    width: 100%;
+    height: 100%;
+    display: none;
+    object-fit: cover;
+    transition: opacity 0.5s ease;
+}
+
+.carousel-image.active {
+    display: block;
+}
+
+button.prev,
+button.next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #004526;
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    cursor: pointer;
+    border-radius: 50%;
+    font-size: 18px;
+}
+
+button.prev {
+    left: 10px;
+}
+
+button.next {
+    right: 10px;
+}
+
+button.prev:hover,
+button.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.main-div {
+    display: flex;
+    width: 100%;
+}
+
+.left-menu {
+    width: 20%;
+    background-color: #EBF3FE;
+}
+
+.left-menu ul li {
+    list-style-type: none;
+}
+
+.left-menu ul {
+    margin: 0;
+    padding: 0;
+}
+
+.main-mobile-icon {
+    color: #004526;
+}
+
+.left-menu ul li a {
+    font-size: 14px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding-bottom: 20px;
+    border-bottom: 0.1px solid gray;
+}
+
+.left-menu ul li a:hover {
+    background-color: #007244;
+    color: white;
+    transform: scale(1.01);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.main-mobile-icon {
+    margin-right: 10px;
 }
 
 .header-container {
@@ -112,17 +216,7 @@ html {
     border: 1px solid green;
 }
 
-/* triunghi mic sub tooltip */
-/* .tooltip-text-navbar::after {
-    content: "";
-    position: absolute;
-    top: 150%;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #333 transparent transparent transparent;
-} */
+
 
 .cart-icon:hover .tooltip-text-navbar {
     visibility: visible;
@@ -138,14 +232,13 @@ html {
 
     justify-content: flex-start;
     width: 100%;
-    background: linear-gradient(to right, #e8f5e9, #81c784, #1b5e20);
+    background: linear-gradient(to right, #004526, #006241, #00674b, #006241, #018749, #018749);
     margin: 0;
 }
 
 .ul-nav-secondary-header {
     display: flex;
-    align-items: stretch;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 100%;
     list-style: none;
     margin: 0;
@@ -154,23 +247,15 @@ html {
     gap: 12px;
 }
 
-.ul-nav-secondary-header {
-    list-style-type: none;
-    margin: 0;
-    padding: 10px 0;
-    box-sizing: border-box;
 
-
-}
 
 .ul-nav-secondary-header,
 a {
     display: flex;
     align-items: space-between;
-    justify-content: space-around;
     text-decoration: none;
     color: black;
-    padding: 6px 20px;
+    padding: 4px 8px;
     box-sizing: border-box;
     border: 1px solid transparent;
     border-radius: 0;
@@ -332,6 +417,7 @@ a {
     background-color: rgba(0, 0, 0, 0.7);
     transform: scale(1.1);
 }
+
 
 .tooltip-text {
     visibility: hidden;
@@ -516,9 +602,8 @@ h1 {
 
 .phonecard {
     overflow: visible;
-    min-width: 180px;
-    max-width: 250px;
-    width: 100%;
+
+    height: 100px;
     background-color: white;
     border-radius: 15px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
@@ -531,7 +616,8 @@ h1 {
 
 .phoneimage {
 
-    width: 100%;
+    width: 150px;
+    height: 150px;
     border-radius: 10px;
     object-fit: cover;
 }
@@ -990,6 +1076,42 @@ h1 {
         height: 150px;
         width: 90%;
         margin: 10px auto;
+    }
+
+    .main-div {
+        flex-direction: column;
+    }
+
+    .left-menu {
+        width: 100%;
+        order: 2;
+        margin-top: 20px;
+        background-color: white;
+       
+    }
+
+    .left-menu ul {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        /* 3 coloane egale */
+        gap: 10px;
+        /* spațiu între elemente */
+    }
+    .left-menu ul li a{
+        border: 1px solid green;
+        margin: 4px;
+        border-radius: 12px;
+        padding: 4px;
+    }
+
+    .carousel {
+        width: 100%;
+    }
+
+    .carousel-image {
+        order: 1;
+        width: 100%;
+        height: 200px;
     }
 
 }
