--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ html {
     color: #F0F0F0;
     overflow-x: hidden;
 }
+
 .carousel-dots {
     position: absolute;
     bottom: 10px;
@@ -23,7 +24,7 @@ html {
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background-color: rgba(255,255,255,0.5);
+    background-color: rgba(255, 255, 255, 0.5);
     cursor: pointer;
 }
 
@@ -1087,7 +1088,7 @@ h1 {
         order: 2;
         margin-top: 20px;
         background-color: white;
-       
+
     }
 
     .left-menu ul {
@@ -1097,7 +1098,8 @@ h1 {
         gap: 10px;
         /* spațiu între elemente */
     }
-    .left-menu ul li a{
+
+    .left-menu ul li a {
         border: 1px solid green;
         margin: 4px;
         border-radius: 12px;
