--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,17 @@ html {
     display: flex;
     gap: 5px;
 }
+/* Hover effect */
+.card:hover {
+    
+    box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.25); /* Umbra mai puternică */
+    cursor: pointer;
+}
+
+/* Imaginea se poate mări subtil */
+
+
+/* Butonul de adăugat în coș devine mai vizibil */
 
 .carousel-dot {
     width: 10px;
