--- a/styles.css
+++ b/styles.css
@@ -19,10 +19,12 @@ html {
     display: flex;
     gap: 5px;
 }
+
 /* Hover effect */
 .card:hover {
-    
-    box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.25); /* Umbra mai puternică */
+
+    box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.25);
+    /* Umbra mai puternică */
     cursor: pointer;
 }
 
@@ -267,7 +269,7 @@ a {
     align-items: space-between;
     text-decoration: none;
     color: black;
-    padding: 4px 8px;
+    padding: 10px;
     box-sizing: border-box;
     border: 1px solid transparent;
     border-radius: 0;
@@ -382,10 +384,7 @@ a {
     background-color: #e8f5e9;
 }
 
-.ul-nav-secondary-header a:hover {
-    transform: none !important;
-    border-radius: 0 !important;
-}
+
 
 
 .megaproducts {
@@ -1049,6 +1048,13 @@ h1 {
     margin: 20px;
 }
 
+.cart-options {
+    color: black;
+    display: block;
+    width: 200px;
+    align-content: center;
+
+}
 
 
 
