--- a/product.css
+++ b/product.css
@@ -6,7 +6,7 @@ body {
 
 .product-display {
     display: flex;
-    width: 100%;
+    width: 70%;
     margin-right: 10px;
     margin-left: 10px;
     border-radius: 12px;
@@ -54,14 +54,22 @@ body {
 
 
 .product-first-display {
-    width: 60%;
+    width: 70%;
+    padding-left: 10px;
+}
+
+label {
+    width: 200px;
+    font-size: small;
+    display: flex;
+    justify-content: stretch;
 }
 
 .option-group {
     margin-bottom: 8px;
-    width: 300px;
+    width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     padding: 10px;
 
 }
@@ -90,20 +98,34 @@ body {
 }
 
 
-
-.option-group label {
-    font-weight: bold;
-    display: block;
-    margin-bottom: 4px;
-    width: 150px;
+.option-box {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    width: 800px;
+    display: flex;
 }
 
-.option-group select {
-    padding: 6px 8px;
-    border-radius: 6px;
+.option-item {
+    padding: 8px;
     border: 1px solid #ccc;
-    width: 160px;
+    border-radius: 6px;
+    cursor: pointer;
+    background: white;
+    user-select: none;
+    transition: 0.2s ease;
 }
+
+.option-item:hover {
+    background: #f2f2f2;
+}
+
+.option-item.active {
+    background: #111;
+    color: white;
+    border-color: #111;
+}
+
 
 .product-detail {
     color: black;
@@ -136,16 +158,22 @@ body {
 .product-gallery {
     display: flex;
     flex-direction: column;
+
     align-items: center;
     gap: 10px;
-    width: 40%;
+    width: 30%;
+    border-radius: 12px;
+    box-shadow:
+        0 4px 12px rgba(0, 0, 0, 0.08),
+        /* umbră subtilă */
+        0 8px 24px rgba(0, 0, 0, 0.06);
 }
 
 .main-product-image {
     width: 100%;
     max-width: 500px;
     height: 400px;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 10px;
     background: #f8f8f8;
 }
@@ -162,10 +190,11 @@ body {
 .thumb-image {
     width: 80px;
     height: 60px;
-    object-fit: cover;
+    object-fit: contain;
     cursor: pointer;
     border: 2px solid transparent;
     border-radius: 6px;
+    margin: 6px;
     transition: transform 0.2s, border-color 0.2s;
 }
 
@@ -292,9 +321,9 @@ body {
 
     .main-product-image {
         width: 400px;
-        
+
         height: 300px;
-        object-fit: cover;
+        object-fit: contain;
         border-radius: 10px;
     }
 
