--- a/styles.css
+++ b/styles.css
@@ -20,18 +20,14 @@ html {
     gap: 5px;
 }
 
-/* Hover effect */
 .card:hover {
 
     box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.25);
-    /* Umbra mai puternică */
     cursor: pointer;
 }
 
-/* Imaginea se poate mări subtil */
 
 
-/* Butonul de adăugat în coș devine mai vizibil */
 
 .carousel-dot {
     width: 10px;
@@ -630,7 +626,10 @@ h1 {
     width: 150px;
     height: 150px;
     border-radius: 10px;
-    object-fit: cover;
+    object-fit: contain;
+}
+.image{
+    object-fit: contain;
 }
 
 .about-phone {
@@ -912,7 +911,7 @@ h1 {
 .cart-total {
     text-align: end;
     margin-top: 10px;
-    margin-right: 10px;
+    margin-right: 20px;
 }
 
 .cart-total-title {
@@ -925,6 +924,8 @@ h1 {
 .cart-total-price {
     color: #333;
     font-size: 1.1em;
+    color: #CC4C4C;
+    font-size: large;
 }
 
 .btn-purchase {
@@ -951,6 +952,7 @@ h1 {
 .container {
     width: 100%;
     background-color: #F0F0F0;
+    padding: 10px;
 }
 
 .empty-message {
@@ -1111,9 +1113,7 @@ h1 {
     .left-menu ul {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        /* 3 coloane egale */
         gap: 10px;
-        /* spațiu între elemente */
     }
 
     .left-menu ul li a {
