--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,61 @@ html {
     overflow-x: hidden;
 }
 
+/* Containerul de rezultate search */
+
+.search-container {
+    position: relative;
+}
+
+#search-results {
+    position: absolute;
+    top: 116px;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    overflow-y: auto;
+    z-index: 9999;
+    /* foarte mare, ca să fie peste tot */
+    display: none;
+    max-height: 670px;
+    padding: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    gap: 15px;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+}
+
+
+
+
+
+
+
+.header-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: #fff;
+    z-index: 9999;
+}
+
+.secondary-header {
+    position: fixed;
+    top: 70px;
+    /* ajustează după înălțimea header-ului tău */
+    left: 0;
+    width: 100%;
+    z-index: 9998;
+}
+
+/* Ca să nu fie acoperit conținutul de meniu */
+body {
+    padding-top: 135px;
+    /* ajustează după cât de înalt este header-ul tău */
+}
+
+
 .carousel-dots {
     position: absolute;
     bottom: 10px;
@@ -623,13 +678,17 @@ h1 {
 
 .phoneimage {
 
-    width: 150px;
+    width: 200px;
     height: 150px;
     border-radius: 10px;
     object-fit: contain;
 }
-.image{
+
+.image {
     object-fit: contain;
+    width: 200px;
+    height: 150px;
+
 }
 
 .about-phone {
@@ -835,9 +894,7 @@ h1 {
 }
 
 .cart-column {
-    display: flex;
     align-items: center;
-    border-bottom: 1px solid black;
     margin-right: 1.5em;
     padding-bottom: 10px;
     margin-top: 10px;
@@ -845,25 +902,30 @@ h1 {
 
 .cart-row {
     display: flex;
+    border-bottom: 1px solid #ccc;
+    background-color: white;
+    border-radius: 12px;
 }
 
 .cart-item {
     width: 45%;
+    padding-left: 10px;
 }
 
 .cart-price {
     width: 20%;
     font-size: 1.2em;
     color: #333;
+    align-content: center;
 }
 
 .cart-quantity {
     width: 35%;
+    align-items: center;
 }
 
 .cart-item-title {
     color: #333;
-    margin-left: .5em;
     font-size: 1.2em;
 }
 
@@ -881,6 +943,7 @@ h1 {
     font-weight: bold;
     padding: 9px;
     cursor: pointer;
+    margin-top: 6px;
 }
 
 .btn-danger:hover {
@@ -900,9 +963,7 @@ h1 {
     margin-right: 25px;
 }
 
-.cart-row:last-child {
-    border-bottom: 1px solid black;
-}
+
 
 .cart-row:last-child .cart-column {
     border: none;
@@ -951,8 +1012,8 @@ h1 {
 
 .container {
     width: 100%;
-    background-color: #F0F0F0;
-    padding: 10px;
+    background-color: #F1F8FE;
+
 }
 
 .empty-message {
@@ -1062,19 +1123,8 @@ h1 {
 
 /* Ketu fillon stilimi per media queries */
 @media (max-width: 500px) {
-    .phonecard {
-        width: 80%;
-    }
 
-    .phonecardscontainer {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 15px;
-        overflow-y: visible;
-        overflow-x: auto;
-        justify-content: space-around;
-        width: 100%;
-    }
+
 
 
 
@@ -1103,6 +1153,7 @@ h1 {
     }
 
     .left-menu {
+        display: none;
         width: 100%;
         order: 2;
         margin-top: 20px;
@@ -1131,6 +1182,18 @@ h1 {
         order: 1;
         width: 100%;
         height: 200px;
+    }
+
+    #search-rezult {
+        display: grid;
+        /* grid în loc de flex */
+        grid-template-columns: repeat(2, 1fr);
+        /* 2 carduri pe rând */
+        gap: 10px;
+        /* spațiu între carduri */
+        overflow-x: hidden;
+        /* eliminăm scroll-ul pe orizontală */
+        padding: 10px;
     }
 
 }
